# python-coach

./: .dockerignore  .gitignore  CONTEXT.md  CURRICULUM.md  Makefile  README.md  STORAGE_CONTRACT.md  pyproject.toml
.claude/: PLUGIN_EXTRACTION_PLAN.md  settings.json
.claude/agents/: code-reviewer.md  coder.md  devops.md  methodist.md  python-platform-architect.md  qa.md
.claude/references/qa/: README.md  allure.md  async-patterns.md  flakiness-checklist.md  performance.md  pitfalls-journal.md  pom-patterns.md  selectors.md
.claude/rules/: all-languages.md  api-layers.md  docker.md  dotenv.md  makefile.md  pyproject.md  python.md  stack.md
deploy/: .env.example  COOLIFY_DEPLOY.md  Makefile  coolify-deploy.sh  docker-compose.yml
dev/: Makefile
docs/: PLATFORM_BLUEPRINT.md
docs/bugs/: 0001-sandbox-timeout-proc-kill-race.md  0002-static-dir-path-off-by-one.md  0003-auth-modal-login-form-not-hidden.md  0004-tests-send-real-email.md  0005-lesson-renders-only-first-exercise.md  0006-codemirror-starter-not-visible-until-click.md  0007-grader-hides-syntax-errors.md
fixtures/: lesson_args_kwargs.json  lesson_async_basics.json  lesson_comprehensions.json  lesson_context_managers.json  lesson_contextlib.json  lesson_dataclasses.json  lesson_decorators_advanced.json  lesson_decorators_basics.json  lesson_descriptors.json  lesson_dunder_methods.json  lesson_exceptions.json  lesson_functions_first_class.json  lesson_functools_toolkit.json  lesson_generators.json  lesson_iterators_protocol.json  lesson_itertools.json  lesson_metaclasses.json  lesson_mocking.json  lesson_pytest_assertions.json  lesson_pytest_fixtures.json  lesson_pytest_marks_plugins.json  lesson_pytest_parametrize.json  lesson_type_hints.json  placeholder_lesson.json
services/api/: .env.example  Dockerfile  Makefile  docker-entrypoint.sh  pyproject.toml
services/api/src/python_coach/: __init__.py  app.py  seed.py  settings.py
services/api/src/python_coach/clients/: email.py  llm.py  sandbox.py  sandbox_result.py
services/api/src/python_coach/controllers/: ai.py  auth.py  exercises.py  lessons.py  profile.py  progress.py  security.py  submissions.py
services/api/src/python_coach/migrations/: env.py
services/api/src/python_coach/migrations/versions/: 115ed2b5049d_initial_schema.py  46ea8a09380f_auth_and_per_user_progress.py  655ae2549a7d_bilingual_prose_and_solution_code.py
services/api/src/python_coach/storage/: _lessons.py  _progress.py  _submissions.py  _users.py  db.py  storage.py
services/api/src/python_coach/storage/models/: lesson.py  submission.py  user.py
services/api/src/python_coach/transport/: deps.py
services/api/src/python_coach/transport/rest/ai/: routes.py
services/api/src/python_coach/transport/rest/auth/: routes.py
services/api/src/python_coach/transport/rest/exercises/: routes.py
services/api/src/python_coach/transport/rest/lessons/: routes.py
services/api/src/python_coach/transport/rest/profile/: routes.py
services/api/src/python_coach/transport/rest/progress/: routes.py
services/api/src/python_coach/transport/rest/submissions/: routes.py
services/api/static/: ai.js  app.css  app.js  auth.js  exercise.js  i18n.js  index.html  profile.js  solution.js  theme.js
services/api/tests/: conftest.py  test_ai_api.py  test_ai_no_real_openai.py  test_auth_api.py  test_grading.py  test_lessons_api.py  test_progress_api.py  test_progression_api.py  test_requires_auth.py  test_sandbox_parse.py  test_sandbox_security_api.py  test_solution_api.py  test_submissions_api.py
services/api/tests/ui/: conftest.py  fixtures.py  i18n_page.py  lesson_page.py  test_ai_features.py  test_codemirror_starter_visible.py  test_lang_switch.py  test_lesson_flow.py  test_lesson_list.py  test_multi_exercise.py  test_progression_ui.py  test_solution_reveal.py  test_theme.py  test_visibility.py
services/sandbox/: Dockerfile  Makefile  smoke.sh
services/sandbox/runner/: run_tests.py
